overflow: auto to fix positioning

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 	border: 3px solid #000000;
 	width: 625px;
 	height: 120px;
+	overflow: auto;
 }
 .optionText {
 	width: 50%;
